lib/src/raft.h

////////////////////////////////////////////////////////////////
//
// nuraft::buffer
//
//

struct bop_raft_buffer_ptr;
struct bop_raft_buffer;
BOP_API struct bop_raft_buffer *bop_raft_buffer_new(const size_t size);
// Do not call this when passing to a function that takes ownership.
BOP_API void bop_raft_buffer_free(struct bop_raft_buffer *buf);
BOP_API unsigned char *bop_raft_buffer_data(struct bop_raft_buffer *buf);
BOP_API size_t bop_raft_buffer_container_size(struct bop_raft_buffer *buf);
BOP_API size_t bop_raft_buffer_size(struct bop_raft_buffer *buf);
BOP_API size_t bop_raft_buffer_pos(struct bop_raft_buffer *buf);
BOP_API void bop_raft_buffer_set_pos(struct bop_raft_buffer *buf, size_t pos);
////////////////////////////////////////////////////////////////
//
// nuraft::cmd_result<bool>
//
//

typedef void (*bop_raft_async_bool_when_ready)(
    void *user_data, bool result, const char *error
);
struct bop_raft_async_bool_ptr;
BOP_API struct bop_raft_async_bool_ptr *bop_raft_async_bool_make(
    void *user_data, bop_raft_async_bool_when_ready when_ready
);
BOP_API void bop_raft_async_bool_delete(const struct bop_raft_async_bool_ptr *self);
BOP_API void *bop_raft_async_bool_get_user_data(const struct bop_raft_async_bool_ptr *self);
BOP_API void bop_raft_async_bool_set_user_data(struct bop_raft_async_bool_ptr *self, void *user_data);
BOP_API bop_raft_async_bool_when_ready
bop_raft_async_bool_get_when_ready(const struct bop_raft_async_bool_ptr *self);
BOP_API void bop_raft_async_bool_set_when_ready(
    struct bop_raft_async_bool_ptr *self, void *user_data,
    bop_raft_async_bool_when_ready when_ready
);
////////////////////////////////////////////////////////////////
//
// nuraft::cmd_result<uint64_t>
//
//

typedef void (*bop_raft_async_u64_when_ready)(
    void *user_data, uint64_t result, const char *error
);
struct bop_raft_async_u64_ptr;
BOP_API struct bop_raft_async_u64_ptr *bop_raft_async_u64_make(
    void *user_data, bop_raft_async_u64_when_ready when_ready
);
BOP_API void bop_raft_async_u64_delete(const struct bop_raft_async_u64_ptr *self);
BOP_API void *bop_raft_async_u64_get_user_data(const struct bop_raft_async_u64_ptr *self);
BOP_API void bop_raft_async_u64_set_user_data(struct bop_raft_async_u64_ptr *self, void *user_data);
BOP_API bop_raft_async_u64_when_ready
bop_raft_async_u64_get_when_ready(const struct bop_raft_async_u64_ptr *self);
BOP_API void bop_raft_async_u64_set_when_ready(
    struct bop_raft_async_u64_ptr *self, void *user_data,
    bop_raft_async_u64_when_ready when_ready
);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::cmd_result<nuraft::ptr<nuraft::buffer>>
///////////////////////////////////////////////////////////////////////////////////////////////////

typedef void (*bop_raft_async_buffer_when_ready)(
    void *user_data, struct bop_raft_buffer *result, const char *error
);
struct bop_raft_async_buffer_ptr;
BOP_API struct bop_raft_async_buffer_ptr *bop_raft_async_buffer_make(
    void *user_data, bop_raft_async_buffer_when_ready when_ready
);
BOP_API void bop_raft_async_buffer_delete(const struct bop_raft_async_buffer_ptr *self);
BOP_API void *bop_raft_async_buffer_get_user_data(const struct bop_raft_async_buffer_ptr *self);
BOP_API void bop_raft_async_buffer_set_user_data(struct bop_raft_async_buffer_ptr *self, void *user_data);
BOP_API bop_raft_async_buffer_when_ready
bop_raft_async_buffer_get_when_ready(const struct bop_raft_async_buffer_ptr *self);
BOP_API void bop_raft_async_buffer_set_when_ready(
    struct bop_raft_async_buffer_ptr *self, void *user_data,
    bop_raft_async_buffer_when_ready when_ready
);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::snapshot
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_snapshot;
BOP_API struct bop_raft_buffer *bop_raft_snapshot_serialize(struct bop_raft_snapshot *snapshot);
BOP_API struct bop_raft_snapshot *bop_raft_snapshot_deserialize(struct bop_raft_buffer *buf);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::cluster_config
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_cluster_config;
struct bop_raft_cluster_config_ptr;
struct bop_raft_srv_config;
BOP_API struct bop_raft_cluster_config *bop_raft_cluster_config_new();
BOP_API struct bop_raft_cluster_config_ptr *
bop_raft_cluster_config_ptr_make(struct bop_raft_cluster_config *config);
BOP_API void bop_raft_cluster_config_free(const struct bop_raft_cluster_config *config);
BOP_API void bop_raft_cluster_config_ptr_delete(const struct bop_raft_cluster_config_ptr *config);
BOP_API struct bop_raft_cluster_config *bop_raft_cluster_config_ptr_get(struct bop_raft_cluster_config_ptr *conf);
BOP_API struct bop_raft_buffer *bop_raft_cluster_config_serialize(struct bop_raft_cluster_config *conf);
BOP_API struct bop_raft_cluster_config *bop_raft_cluster_config_deserialize(struct bop_raft_buffer *buf);
// Log index number of current config.
BOP_API uint64_t bop_raft_cluster_config_log_idx(struct bop_raft_cluster_config *cfg);
// Log index number of previous config.
BOP_API uint64_t bop_raft_cluster_config_prev_log_idx(struct bop_raft_cluster_config *cfg);
// `true` if asynchronous replication mode is on.
BOP_API bool bop_raft_cluster_config_is_async_replication(struct bop_raft_cluster_config *cfg);
// Custom config data given by user.
BOP_API void bop_raft_cluster_config_user_ctx(struct bop_raft_cluster_config *cfg, char *out_data, size_t out_data_size);
BOP_API size_t bop_raft_cluster_config_user_ctx_size(struct bop_raft_cluster_config *cfg);
// Number of servers.
BOP_API size_t bop_raft_cluster_config_servers_size(struct bop_raft_cluster_config *cfg);
// Server config at index
BOP_API struct bop_raft_srv_config *bop_raft_cluster_config_server(struct bop_raft_cluster_config *cfg, int32_t idx);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// bop_raft_srv_config
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_srv_config_ptr;
// BOP_API void bop_raft_srv_config_ptr_retain(bop_raft_srv_config_ptr* p);
//
// BOP_API void bop_raft_srv_config_ptr_release(bop_raft_srv_config_ptr* p);
//
// BOP_API int64_t bop_raft_srv_config_ptr_ref_count(bop_raft_srv_config_ptr* p);

struct bop_raft_srv_config_vec;
BOP_API struct bop_raft_srv_config_vec *bop_raft_srv_config_vec_make();
BOP_API void bop_raft_srv_config_vec_delete(const struct bop_raft_srv_config_vec *vec);