lib/src/uws.h

/**
 * The response type.
 */
typedef void* uws_res_t;
/**
 * On writable.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param handler The handler.
 */
BOP_API void uws_res_on_writable(uws_res_t res, void* user_data, bool (*handler)(uws_res_t res, void* user_data, uint64_t m));