rust/bop-rs/src/bindings.rs

unsafe extern "C" {
    pub fn wcstoimax(
        _String: *const u16,
        _EndPtr: *mut *mut u16,
        _Radix: ::std::os::raw::c_int,
    ) -> intmax_t;
}
unsafe extern "C" {
    pub fn _wcstoimax_l(
        _String: *const u16,
        _EndPtr: *mut *mut u16,
        _Radix: ::std::os::raw::c_int,
        _Locale: _locale_t,
    ) -> intmax_t;
}
unsafe extern "C" {
    pub fn wcstoumax(
        _String: *const u16,
        _EndPtr: *mut *mut u16,
        _Radix: ::std::os::raw::c_int,
    ) -> uintmax_t;
}
unsafe extern "C" {
    pub fn _wcstoumax_l(
        _String: *const u16,
        _EndPtr: *mut *mut u16,
        _Radix: ::std::os::raw::c_int,
        _Locale: _locale_t,
    ) -> uintmax_t;
}
pub type std_nullptr_t = *const ::std::os::raw::c_void;
pub type std_integral_constant_value_type<_Ty> = _Ty;
pub type std_integral_constant_type = u8;
pub type std_bool_constant = u8;
pub type std_true_type = u8;
pub type std_false_type = u8;
pub type std_enable_if_t = u8;
pub type std_conditional_type<_Ty1> = _Ty1;
pub type std_conditional_t = u8;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_is_same {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_remove_const {
    pub _address: u8,
}
pub type std_remove_const_type<_Ty> = _Ty;
pub type std_remove_const_t = std_remove_const;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_remove_volatile {
    pub _address: u8,
}
pub type std_remove_volatile_type<_Ty> = _Ty;
pub type std_remove_volatile_t = std_remove_volatile;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_remove_cv {
    pub _address: u8,
}
pub type std_remove_cv_type<_Ty> = _Ty;
pub type std_remove_cv__Apply = u8;
pub type std_remove_cv_t = std_remove_cv;
pub type std__Disjunction_type<_First> = _First;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_disjunction {
    pub _base: std_false_type,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_is_integral {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_is_floating_point {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_is_arithmetic {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_remove_reference {
    pub _address: u8,
}
pub type std_remove_reference_type<_Ty> = _Ty;
pub type std_remove_reference__Const_thru_ref_type<_Ty> = _Ty;
pub type std_remove_reference_t = std_remove_reference;
pub type std__Const_thru_ref = std_remove_reference;
pub type std__Remove_cvref_t = std_remove_cv_t;
pub type std_remove_cvref_t = std__Remove_cvref_t;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct std_remove_cvref {
    pub _address: u8,
}
pub type std_remove_cvref_type = std_remove_cvref_t;
pub type std_max_align_t = f64;
pub type std_byte = ::std::os::raw::c_uchar;
pub type max_align_t = f64;
unsafe extern "C" {
    pub fn bop_alloc(size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_zalloc(size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_calloc(element_size: usize, count: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_alloc_aligned(alignment: usize, size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_zalloc_aligned(alignment: usize, size: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_realloc(
        p: *mut ::std::os::raw::c_void,
        new_size: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_dealloc(p: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn bop_dealloc_sized(p: *mut ::std::os::raw::c_void, size: usize);
}
unsafe extern "C" {
    pub fn bop_heap_access(data: *mut ::std::os::raw::c_void, size: usize);
}
unsafe extern "C" {
    pub fn bop_malloc_usable_size(data: *const ::std::os::raw::c_void) -> usize;
}
unsafe extern "C" {
    pub fn bop_size_of_shared_ptr() -> usize;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_buffer_ptr {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_buffer {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_buffer_new(size: usize) -> *mut bop_raft_buffer;
}
unsafe extern "C" {
    pub fn bop_raft_buffer_free(buf: *mut bop_raft_buffer);
}
unsafe extern "C" {
    pub fn bop_raft_buffer_data(buf: *mut bop_raft_buffer) -> *mut ::std::os::raw::c_uchar;
}
unsafe extern "C" {
    pub fn bop_raft_buffer_container_size(buf: *mut bop_raft_buffer) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_buffer_size(buf: *mut bop_raft_buffer) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_buffer_pos(buf: *mut bop_raft_buffer) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_buffer_set_pos(buf: *mut bop_raft_buffer, pos: usize);
}
pub type bop_raft_async_bool_when_ready = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        result: bool,
        error: *const ::std::os::raw::c_char,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_async_bool_ptr {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_async_bool_make(
        user_data: *mut ::std::os::raw::c_void,
        when_ready: bop_raft_async_bool_when_ready,
    ) -> *mut bop_raft_async_bool_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_async_bool_delete(self_: *const bop_raft_async_bool_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_async_bool_get_user_data(
        self_: *const bop_raft_async_bool_ptr,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_raft_async_bool_set_user_data(
        self_: *mut bop_raft_async_bool_ptr,
        user_data: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn bop_raft_async_bool_get_when_ready(
        self_: *const bop_raft_async_bool_ptr,
    ) -> bop_raft_async_bool_when_ready;
}
unsafe extern "C" {
    pub fn bop_raft_async_bool_set_when_ready(
        self_: *mut bop_raft_async_bool_ptr,
        user_data: *mut ::std::os::raw::c_void,
        when_ready: bop_raft_async_bool_when_ready,
    );
}
pub type bop_raft_async_u64_when_ready = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        result: u64,
        error: *const ::std::os::raw::c_char,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_async_u64_ptr {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_async_u64_make(
        user_data: *mut ::std::os::raw::c_void,
        when_ready: bop_raft_async_u64_when_ready,
    ) -> *mut bop_raft_async_u64_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_async_u64_delete(self_: *const bop_raft_async_u64_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_async_u64_get_user_data(
        self_: *const bop_raft_async_u64_ptr,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_raft_async_u64_set_user_data(
        self_: *mut bop_raft_async_u64_ptr,
        user_data: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn bop_raft_async_u64_get_when_ready(
        self_: *const bop_raft_async_u64_ptr,
    ) -> bop_raft_async_u64_when_ready;
}
unsafe extern "C" {
    pub fn bop_raft_async_u64_set_when_ready(
        self_: *mut bop_raft_async_u64_ptr,
        user_data: *mut ::std::os::raw::c_void,
        when_ready: bop_raft_async_u64_when_ready,
    );
}
#[doc = "\n nuraft::cmd_result<nuraft::ptr<nuraft::buffer>>\n"]
pub type bop_raft_async_buffer_when_ready = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        result: *mut bop_raft_buffer,
        error: *const ::std::os::raw::c_char,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_async_buffer_ptr {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_async_buffer_make(
        user_data: *mut ::std::os::raw::c_void,
        when_ready: bop_raft_async_buffer_when_ready,
    ) -> *mut bop_raft_async_buffer_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_async_buffer_delete(self_: *const bop_raft_async_buffer_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_async_buffer_get_user_data(
        self_: *const bop_raft_async_buffer_ptr,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bop_raft_async_buffer_set_user_data(
        self_: *mut bop_raft_async_buffer_ptr,
        user_data: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn bop_raft_async_buffer_get_when_ready(
        self_: *const bop_raft_async_buffer_ptr,
    ) -> bop_raft_async_buffer_when_ready;
}
unsafe extern "C" {
    pub fn bop_raft_async_buffer_set_when_ready(
        self_: *mut bop_raft_async_buffer_ptr,
        user_data: *mut ::std::os::raw::c_void,
        when_ready: bop_raft_async_buffer_when_ready,
    );
}
#[doc = "\n nuraft::snapshot\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_snapshot {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_snapshot_serialize(snapshot: *mut bop_raft_snapshot) -> *mut bop_raft_buffer;
}
unsafe extern "C" {
    pub fn bop_raft_snapshot_deserialize(buf: *mut bop_raft_buffer) -> *mut bop_raft_snapshot;
}
#[doc = "\n nuraft::cluster_config\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_cluster_config {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_cluster_config_ptr {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_srv_config {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_new() -> *mut bop_raft_cluster_config;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_ptr_make(
        config: *mut bop_raft_cluster_config,
    ) -> *mut bop_raft_cluster_config_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_free(config: *const bop_raft_cluster_config);
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_ptr_delete(config: *const bop_raft_cluster_config_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_ptr_get(
        conf: *mut bop_raft_cluster_config_ptr,
    ) -> *mut bop_raft_cluster_config;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_serialize(
        conf: *mut bop_raft_cluster_config,
    ) -> *mut bop_raft_buffer;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_deserialize(
        buf: *mut bop_raft_buffer,
    ) -> *mut bop_raft_cluster_config;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_log_idx(cfg: *mut bop_raft_cluster_config) -> u64;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_prev_log_idx(cfg: *mut bop_raft_cluster_config) -> u64;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_is_async_replication(cfg: *mut bop_raft_cluster_config) -> bool;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_user_ctx(
        cfg: *mut bop_raft_cluster_config,
        out_data: *mut ::std::os::raw::c_char,
        out_data_size: usize,
    );
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_user_ctx_size(cfg: *mut bop_raft_cluster_config) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_servers_size(cfg: *mut bop_raft_cluster_config) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_cluster_config_server(
        cfg: *mut bop_raft_cluster_config,
        idx: i32,
    ) -> *mut bop_raft_srv_config;
}
#[doc = "\n bop_raft_srv_config\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_srv_config_ptr {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_srv_config_vec {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_vec_make() -> *mut bop_raft_srv_config_vec;
}
unsafe extern "C" {
    pub fn bop_raft_srv_config_vec_delete(vec: *const bop_raft_srv_config_vec);
}
